Upgraded statistics to java 13 and spring 2.7